--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -10,4 +10,4 @@
       when: (ansible_os_family | lower) == 'debian'
 
   roles:
-    - role: carlosgo13.hello-world
+    - role: carlosgo13.hello_world
