--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,11 +42,9 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        image:
-          - geerlingguy/docker-ubuntu2004-ansible:latest
-          - geerlingguy/docker-ubuntu1804-ansible:latest
-          - geerlingguy/docker-debian10-ansible:latest
-          - geerlingguy/docker-centos7-ansible:latest
+        distro:
+          - ubuntu2004
+          - ubuntu1804
     steps:
       - name: Check out the codebase.
         uses: actions/checkout@v2
