Fix molecule test sequence

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -15,7 +15,11 @@ scenario:
   test_sequence:
     - dependency
     - lint
+    - destroy
+    - syntax
+    - create
     - converge
+    - destroy
 provisioner:
   name: ansible
 verifier:
